--- a/source/_partials/navbar.html
+++ b/source/_partials/navbar.html
@@ -92,19 +92,20 @@ terminusCompareApp.filter('search', function() {
                   <div class="row sub-menu-top">
                     <div class="col-xs-6">
 
-                        <li><a id="docs" href="/docs">Getting Started</a></li>
-                        <li><a id="guides" href="/docs/guides">Developing on Pantheon</a></li>
-                        <li><a id="terminus" href="/docs/terminus">Optimizing Performance</a></li>
-                        <li><a id="changelogs" href="/docs/changelog">Troubleshooting</a></li>
+
+                        <li><a id="docs" href="/docs/get-started">Get Started</a></li>
+                        <li><a id="guides" href="/docs/develop">Develop</a></li>
+                        <li><a id="terminus" href="/docs/optimize">Optimize Performance</a></li>
+                        <li><a id="changelogs" href="/docs/troubleshoot">Troubleshoot</a></li>
 
                     </div>
 
                     <div class="col-xs-6">
 
-                        <li><a id="docs" href="/docs">Going Live</a></li>
-                        <li><a id="guides" href="/docs/guides">Platform & Infrastructure </a></li>
-                        <li><a id="terminus" href="/docs/terminus">Automating & Integrating</a></li>
-                        <li><a id="changelogs" href="/docs/changelog">Managing Users & Organizations</a></li>
+                        <li><a id="docs" href="/docs/go-live">Going Live</a></li>
+                        <li><a id="guides" href="/docs/infrastructure">Platform & Infrastructure </a></li>
+                        <li><a id="terminus" href="/docs/integrate">Automating & Integrating</a></li>
+                        <li><a id="changelogs" href="/docs/manage">Managing Users & Organizations</a></li>
 
                     </div>
                   </div>
