--- a/source/docs.html
+++ b/source/docs.html
@@ -16,32 +16,76 @@ ul.pio-breadcrumb {
 </style>
 <div class="container">
 
-  <h1 class="title">Learn all about how to use Pantheon.</h1>
-  <h2 class="subtitle">Learning Topics</h2>
+  <h1 class="title">Learn how to use Pantheon.</h1>
 
   <div class="mb-70">
-
     <div class="row row-topics-list">
-
-      <div class="col-md-6">
-        <a class="topic-info-link" href="/docs/automating">
-          <div class="topic-info">
-            <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/topic-thumb-developing.png)"></div>
+      <div class="col-md-4">
+        <a class="topic-info-link" href="/docs/get-started">
+          <div class="main-topic-info">
             <div class="topic-info__text">
-              <h3 class="topic-info__title">Developing on Pantheon</h3>
-              <p class="topic-info__description">Beard tote bag blog, bicycle rights iPhone williamsburg gentrify pabst.</p>
+              <div class="main-topic-info__image" style="background-image:url(/source/docs/assets/images/icon-start.svg)"></div>
+              <h2 class="main-topic-info__title">Get Started</h2>
+              <p class="main-topic-info__description">Migrate existing sites or spin up a new site, then learn the basics of managing projects on Pantheon.</p>
             </div>
           </div>
         </a>
       </div>
 
-      <div class="col-md-6">
-        <a class="topic-info-link" href="/docs/automating">
-          <div class="topic-info">
-            <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/topic-thumb-developing.png)"></div>
+      <div class="col-md-4">
+        <a class="topic-info-link" href="/docs/develop">
+          <div class="main-topic-info">
             <div class="topic-info__text">
-              <h3 class="topic-info__title">Developing on Pantheon</h3>
-              <p class="topic-info__description">Beard tote bag blog, bicycle rights iPhone williamsburg gentrify pabst.</p>
+              <div class="main-topic-info__image" style="background-image:url(/source/docs/assets/images/icon-develop.svg)"></div>
+              <h2 class="main-topic-info__title">Develop</h2>
+              <p class="main-topic-info__description">Setup a local development environment, then use Pantheon’s Dev, Test, and Live workflow to follow development best practices with ease.</p>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-md-4">
+        <a class="topic-info-link" href="/docs/go-live">
+          <div class="main-topic-info">
+            <div class="topic-info__text">
+              <div class="main-topic-info__image" style="background-image:url(/source/docs/assets/images/icon-golive.svg)"></div>
+              <h2 class="main-topic-info__title">Go Live</h2>
+              <p class="main-topic-info__description">Learn how to launch sites on Pantheon by selecting the right plan, then adding your domain and enabling HTTPS.</p>
+            </div>
+          </div>
+        </a>
+      </div>
+    </div>
+      <div class="row row-topics-list">
+      <div class="col-md-4">
+        <a class="topic-info-link" href="/docs/infrastructure">
+          <div class="topic-info">
+            <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/icon-platform.svg)"></div>
+            <div class="topic-info__text">
+              <h3 class="topic-info__title">Platform & Infrastructure</h3>
+              <p class="topic-info__description">Get the specifics on our container-based, horizontally scalable infrastructure.</p>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-md-4">
+        <a class="topic-info-link" href="/docs/integrate">
+          <div class="topic-info">
+            <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/icon-automate.svg)"></div>
+            <div class="topic-info__text">
+              <h3 class="topic-info__title">Automate & Integrate</h3>
+              <p class="topic-info__description">Integrate your development workflow with third party tools and automate drudge work.</p>
+            </div>
+          </div>
+        </a>
+      </div>
+
+      <div class="col-md-4">
+        <a class="topic-info-link" href="/docs/optimize">
+          <div class="topic-info">
+            <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/icon-performance.svg)"></div>
+            <div class="topic-info__text">
+              <h3 class="topic-info__title">Optimize Performance</h3>
+              <p class="topic-info__description">Configure cache, upgrade PHP versions, and use New Relic Pro to achieve optimal performance.</p>
             </div>
           </div>
         </a>
@@ -51,81 +95,36 @@ ul.pio-breadcrumb {
 
     <div class="row row-topics-list">
 
-      <div class="col-md-6">
-        <a class="topic-info-link" href="/docs/automating">
+      <div class="col-md-4">
+        <a class="topic-info-link" href="/docs/manage">
           <div class="topic-info">
-            <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/topic-thumb-developing.png)"></div>
+            <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/icon-manage.svg)"></div>
             <div class="topic-info__text">
-              <h3 class="topic-info__title">Developing on Pantheon</h3>
-              <p class="topic-info__description">Beard tote bag blog, bicycle rights iPhone williamsburg gentrify pabst.</p>
+              <h3 class="topic-info__title">Manage Users and Orgs</h3>
+              <p class="topic-info__description">Cloud-based development tools for teams, Multidev, role-based permissions, and more.</p>
             </div>
           </div>
         </a>
       </div>
 
-      <div class="col-md-6">
-        <a class="topic-info-link" href="/docs/automating">
+      <div class="col-md-4">
+        <a class="topic-info-link" href="/docs/troubleshoot">
           <div class="topic-info">
-            <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/topic-thumb-developing.png)"></div>
+            <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/icon-troubleshoot.svg)"></div>
             <div class="topic-info__text">
-              <h3 class="topic-info__title">Developing on Pantheon</h3>
-              <p class="topic-info__description">Beard tote bag blog, bicycle rights iPhone williamsburg gentrify pabst.</p>
+              <h3 class="topic-info__title">Troubleshoot</h3>
+              <p class="topic-info__description">Debug error messages and unexpected server responses.</p>
             </div>
           </div>
         </a>
       </div>
-
-    </div>
-
-    <div class="row row-topics-list">
-
-      <div class="col-md-6">
-        <a class="topic-info-link" href="/docs/automating">
+      <div class="col-md-4">
+        <a class="topic-info-link" href="/docs/getting-support">
           <div class="topic-info">
-            <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/topic-thumb-developing.png)"></div>
+            <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/icon-support.svg)"></div>
             <div class="topic-info__text">
-              <h3 class="topic-info__title">Developing on Pantheon</h3>
-              <p class="topic-info__description">Beard tote bag blog, bicycle rights iPhone williamsburg gentrify pabst.</p>
-            </div>
-          </div>
-        </a>
-      </div>
-
-      <div class="col-md-6">
-        <a class="topic-info-link" href="/docs/automating">
-          <div class="topic-info">
-            <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/topic-thumb-developing.png)"></div>
-            <div class="topic-info__text">
-              <h3 class="topic-info__title">Developing on Pantheon</h3>
-              <p class="topic-info__description">Beard tote bag blog, bicycle rights iPhone williamsburg gentrify pabst.</p>
-            </div>
-          </div>
-        </a>
-      </div>
-
-    </div>
-
-    <div class="row row-topics-list">
-
-      <div class="col-md-6">
-        <a class="topic-info-link" href="/docs/automating">
-          <div class="topic-info">
-            <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/topic-thumb-developing.png)"></div>
-            <div class="topic-info__text">
-              <h3 class="topic-info__title">Developing on Pantheon</h3>
-              <p class="topic-info__description">Beard tote bag blog, bicycle rights iPhone williamsburg gentrify pabst.</p>
-            </div>
-          </div>
-        </a>
-      </div>
-
-      <div class="col-md-6">
-        <a class="topic-info-link" href="/docs/automating">
-          <div class="topic-info">
-            <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/topic-thumb-developing.png)"></div>
-            <div class="topic-info__text">
-              <h3 class="topic-info__title">Developing on Pantheon</h3>
-              <p class="topic-info__description">Beard tote bag blog, bicycle rights iPhone williamsburg gentrify pabst.</p>
+              <h3 class="topic-info__title">Support</h3>
+              <p class="topic-info__description">Need even more help? We’re here for you. Find out how to get support from Pantheon.</p>
             </div>
         </div>
       </div>
@@ -144,9 +143,17 @@ ul.pio-breadcrumb {
   <div class="row mb-70">
     <ul class="top-docs">
       <li><a href="/docs/drush">Installing Cygwin on Windows</a></li>
-      <li><a href="/docs/drush">Using Terminus to Create and Update Drupal Sites on Pantheon</a></li>
       <li><a href="/docs/drush">Drupal Drush Command-Line Utility</a></li>
-      <li><a href="/docs/drush">Use the Command Line to Create a WordPress Site Using Terminus and WP-CLI</a></li>
+      <li><a href="/docs/drush">Installing Cygwin on Windows</a></li>
+      <li><a href="/docs/drush">Drupal Drush Command-Line Utility</a></li>
+      <li><a href="/docs/drush">Installing Cygwin on Windows</a></li>
+      <li><a href="/docs/drush">Drupal Drush Command-Line Utility</a></li>
+      <li><a href="/docs/drush">Installing Cygwin on Windows</a></li>
+      <li><a href="/docs/drush">Drupal Drush Command-Line Utility</a></li>
+      <li><a href="/docs/drush">Installing Cygwin on Windows</a></li>
+      <li><a href="/docs/drush">Drupal Drush Command-Line Utility</a></li>
+      <li><a href="/docs/drush">Installing Cygwin on Windows</a></li>
+      <li><a href="/docs/drush">Drupal Drush Command-Line Utility</a></li>
     </ul>
   </div>
 
@@ -161,13 +168,6 @@ ul.pio-breadcrumb {
         <p><strong>Dashboard design updates</strong> These include improvements to selected states for environment tabs and menus to help keep you better oriented when moving through the UI, added white space to give everything some breathing room, and nested secondary menu items on the left side to streamline navigation.</p>
 
         <a href="/docs/changelog" class="cta">More</a>
-      </div>
-
-      <div class="changelog-wrapper mb-70">
-        <h2 class="subtitle">Support</h2>
-        <p><strong>Dashboard design updates</strong> These include improvements to selected states for environment tabs and menus to help keep you better oriented when moving through the UI, added white space to give everything some breathing room, and nested secondary menu items on the left side to streamline navigation.</p>
-
-        <a href="/docs/getting-support" class="cta">More</a>
       </div>
 
     </div>
@@ -185,4 +185,5 @@ ul.pio-breadcrumb {
 
 
 
+</div>
 </div>
