--- a/source/_partials/breadcrumb.html
+++ b/source/_partials/breadcrumb.html
@@ -1,31 +1,27 @@
-<div style="margin-top:40px;margin-bottom:20px;" class="container content">
-  <div class="row">
-    <div class="col-md-12">
-      <ul class="pio-breadcrumb">
-          <a href="/docs">Home</a> /
-            {% if page.categories %}
-              {% for category in page.categories %}
-                {% if category == "getstarted" %}
-                <a href="{{ site.url }}/get-started">Get Started</a> /
-                {% elseif category == "golive" %}
-                <a href="{{ site.url }}/go-live">Go Live</a> /
-                {% elseif category == "platform" %}
-                <a href="{{ site.url }}/{{ category|url_encode(true) }}">Platform & Inftrastructure</a> /
-                {% elseif category == "automate" %}
-                <a href="{{ site.url }}/{{ category|url_encode(true) }}" >Automate & Integrate</a> /
-                {% elseif category == "performance" %}
-                <a href="{{ site.url }}/{{ category|url_encode(true) }}" >Optimize Performance</a> /
-                {% elseif category == "manage" %}
-                <a href="{{ site.url }}/{{ category|url_encode(true) }}">Manage Users & Orgs</a> /
-                {% elseif category == "cli" %}
-                <a href="{{ site.url }}/{{ category|url_encode(true) }}">Command Line Tools</a> /
-                {% else %}
-                <a href="{{ site.url }}/{{ category|url_encode(true) }}" >{{ category | capitalize }}</a> /
-                {% endif %}
-              {% endfor %}
+<div style="row">
+  <ul class="pio-breadcrumb" style="margin-top:30px;">
+      <a href="/docs">Home</a> /
+        {% if page.categories %}
+          {% for category in page.categories %}
+            {% if category == "getstarted" %}
+            <a href="{{ site.url }}/get-started">Get Started</a> /
+            {% elseif category == "golive" %}
+            <a href="{{ site.url }}/go-live">Go Live</a> /
+            {% elseif category == "platform" %}
+            <a href="{{ site.url }}/{{ category|url_encode(true) }}">Platform & Inftrastructure</a> /
+            {% elseif category == "automate" %}
+            <a href="{{ site.url }}/{{ category|url_encode(true) }}" >Automate & Integrate</a> /
+            {% elseif category == "performance" %}
+            <a href="{{ site.url }}/{{ category|url_encode(true) }}" >Optimize Performance</a> /
+            {% elseif category == "manage" %}
+            <a href="{{ site.url }}/{{ category|url_encode(true) }}">Manage Users & Orgs</a> /
+            {% elseif category == "cli" %}
+            <a href="{{ site.url }}/{{ category|url_encode(true) }}">Command Line Tools</a> /
+            {% else %}
+            <a href="{{ site.url }}/{{ category|url_encode(true) }}" >{{ category | capitalize }}</a> /
             {% endif %}
-          <a data-proofer-ignore>{{ page.title }}</a>
-      </div>
-    </div>
-  </div>
+          {% endfor %}
+        {% endif %}
+      <a data-proofer-ignore>{{ page.title }}</a>
+  </ul>
 </div>
