Fix container rows, switch taining and guide lists, design tweaks

--- a/source/_views/post.html
+++ b/source/_views/post.html
@@ -1,38 +1,31 @@
 {% extends "default" %}
 {% block content_wrapper %}
-<article>
-    <div class="article container-fluid">
-      <div style="margin-top:10px;" class="col-md-12">
-      <a style="text-decoration:none;" href="/docs/changelog"><span style="font-size:20px;">&#171;</span> Back to all Changelogs</a>
-    </div>
-        <div class="col-md-9">
-            <header>
-                <h1>Pantheon Changelog<br /><small>{{page.title}}</small></h1>
-            </header>
-            <div>{{ page.blocks.content|raw }}</div>
-        </div>
-        <!-- SIDEBAR NAV - Search/TOC -->
-        <div class="col-md-3">
-            {% include ("sidebarnav.html") %}
-        </div>
-    </div>
+  <div class="col-md-9" style="margin-top:-20px;">
+    <h1>Pantheon Changelog<br />{% if page.changelogmain is not defined %}<small>{{page.title}}</small></h1>{% endif %}
+    {{ page.blocks.content|raw }}
+    {% if page.changelogmain is not defined %}
     <div class="text-center">
-        <ul class="pagination">
-            {% if not page.next_post %}
-                {% set newer_disabled = 'disabled' %}
-                {% set newer_url = page.url %}
-            {% else %}
-                {% set newer_url = page.next_post.url %}
-            {% endif %}
-            <li class="{{ newer_disabled }}"><a href="{{ newer_url }}">Newer</a></li>
-            {% if not page.previous_post %}
-                {% set older_disabled = 'disabled' %}
-                {% set older_url = page.url %}
-            {% else %}
-                {% set older_url = page.previous_post.url %}
-            {% endif %}
-            <li class="{{ older_disabled }}"><a href="{{ older_url }}" title="{{ page.previous_post.title }}">Older</a></li>
-        </ul>
+      <ul class="pagination">
+        {% if not page.next_post %}
+        {% set newer_disabled = 'disabled' %}
+        {% set newer_url = page.url %}
+        {% else %}
+        {% set newer_url = page.next_post.url %}
+        {% endif %}
+        <li class="{{ newer_disabled }}"><a href="{{ newer_url }}">Newer</a></li>
+        {% if not page.previous_post %}
+        {% set older_disabled = 'disabled' %}
+        {% set older_url = page.url %}
+        {% else %}
+        {% set older_url = page.previous_post.url %}
+        {% endif %}
+        <li class="{{ older_disabled }}"><a href="{{ older_url }}" title="{{ page.previous_post.title }}">Older</a></li>
+      </ul>
     </div>
-</article>
+    {% endif %}
+  </div>
+  <div class="article col-md-3">
+    {% include ("sidebarnav.html") %}
+  </div>
+
 {% endblock %}
