--- a/source/docs.html
+++ b/source/docs.html
@@ -15,120 +15,128 @@ ul.pio-breadcrumb {
   padding-top: 40px;
 }
 </style>
-<div class="container">
 
-  <h1 class="title">Learn how to use Pantheon.</h1>
+
+  <h1 class="title">Documentation Topics</h1>
+
 
   <div class="mb-70">
-    <div class="row row-topics-list">
-      <div class="col-md-4">
+    <div class="row row-topics-list row-topics-list-main">
+
+      <div class="main-topic-info">
         <a class="topic-info-link" href="/docs/get-started">
-          <div class="main-topic-info">
+
             <div class="topic-info__text">
               <div class="main-topic-info__image" style="background-image:url(/source/docs/assets/images/icon-start.svg)"></div>
               <h2 class="main-topic-info__title">Get Started</h2>
-              <p class="main-topic-info__description">Migrate existing sites or spin up a new site, then learn the basics of managing projects on Pantheon.</p>
+              <p class="main-topic-info__description">Migrate existing sites or spin up a new site, then learn how to manage your projects on Pantheon.</p>
             </div>
-          </div>
+
         </a>
       </div>
 
-      <div class="col-md-4">
+      <div class="main-topic-info">
         <a class="topic-info-link" href="/docs/develop">
-          <div class="main-topic-info">
+
             <div class="topic-info__text">
               <div class="main-topic-info__image" style="background-image:url(/source/docs/assets/images/icon-develop.svg)"></div>
               <h2 class="main-topic-info__title">Develop</h2>
-              <p class="main-topic-info__description">Setup a local development environment, then use Pantheon’s Dev, Test, and Live workflow to follow development best practices with ease.</p>
+              <p class="main-topic-info__description">Setup your local or  work via SFTP and Git within our Dev, Test, and Live environments to follow development best practices.</p>
             </div>
-          </div>
+
         </a>
       </div>
-      <div class="col-md-4">
+      <div class="main-topic-info">
         <a class="topic-info-link" href="/docs/go-live">
-          <div class="main-topic-info">
+
             <div class="topic-info__text">
               <div class="main-topic-info__image" style="background-image:url(/source/docs/assets/images/icon-golive.svg)"></div>
               <h2 class="main-topic-info__title">Go Live</h2>
-              <p class="main-topic-info__description">Learn how to launch sites on Pantheon by selecting the right plan, then adding your domain and enabling HTTPS.</p>
+              <p class="main-topic-info__description">Learn how to launch sites on Pantheon. Select the correct plan, then add your domain and enable HTTPS.</p>
             </div>
-          </div>
+
         </a>
       </div>
     </div>
-      <div class="row row-topics-list">
-      <div class="col-md-4">
+      <div class="row row-topics-list row-topics-list-secondary">
+
+      <div class="topic-info">
         <a class="topic-info-link" href="/docs/platform">
-          <div class="topic-info">
+
             <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/icon-platform.svg)"></div>
             <div class="topic-info__text">
-              <h3 class="topic-info__title">Platform & Infrastructure</h3>
-              <p class="topic-info__description">Get the specifics on our container-based, horizontally scalable infrastructure.</p>
+              <h3 class="topic-info__title">Explore Platform Architecture</h3>
+              <p class="topic-info__description">Understand and leverage our container-based infrastructure for smooth scaling.</p>
             </div>
-          </div>
+
         </a>
       </div>
-      <div class="col-md-4">
+      <div class="topic-info">
         <a class="topic-info-link" href="/docs/automate">
-          <div class="topic-info">
+
             <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/icon-automate.svg)"></div>
             <div class="topic-info__text">
               <h3 class="topic-info__title">Automate & Integrate</h3>
-              <p class="topic-info__description">Integrate your development workflow with third party tools and automate drudge work.</p>
+              <p class="topic-info__description">Script common procedures using Quicksilver and the Pantheon YAML file. Integrate third-party services with Drupal and WordPress.</p>
             </div>
-          </div>
+
         </a>
       </div>
 
-      <div class="col-md-4">
+      <div class="topic-info">
         <a class="topic-info-link" href="/docs/performance">
-          <div class="topic-info">
+
             <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/icon-performance.svg)"></div>
             <div class="topic-info__text">
               <h3 class="topic-info__title">Optimize Performance</h3>
-              <p class="topic-info__description">Configure cache, upgrade PHP versions, and use New Relic Pro to achieve optimal performance.</p>
+              <p class="topic-info__description">Configure cache, upgrade PHP, and use New Relic APM for optimal performance.</p>
             </div>
-          </div>
+
         </a>
       </div>
 
     </div>
 
-    <div class="row row-topics-list">
+    <div class="row row-topics-list row-topics-list-secondary">
 
-      <div class="col-md-4">
+      <div class="topic-info">
         <a class="topic-info-link" href="/docs/manage">
-          <div class="topic-info">
+
             <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/icon-manage.svg)"></div>
             <div class="topic-info__text">
-              <h3 class="topic-info__title">Manage Users and Orgs</h3>
-              <p class="topic-info__description">Cloud-based development tools for teams, Multidev, role-based permissions, and more.</p>
+              <h3 class="topic-info__title">Manage Users and Organizations</h3>
+              <p class="topic-info__description">Add team members, restrict access, and manage projects in bulk using cloud-based development tools.</p>
             </div>
-          </div>
+
         </a>
+
       </div>
 
-      <div class="col-md-4">
+      <div class="topic-info">
         <a class="topic-info-link" href="/docs/troubleshoot">
-          <div class="topic-info">
+
             <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/icon-troubleshoot.svg)"></div>
             <div class="topic-info__text">
               <h3 class="topic-info__title">Troubleshoot</h3>
-              <p class="topic-info__description">Debug error messages and unexpected server responses.</p>
+              <p class="topic-info__description">Understand known issues with plugins or modules and expose problems in log files.</p>
             </div>
-          </div>
+
         </a>
       </div>
-      <div class="col-md-4">
+      <div class="topic-info">
         <a class="topic-info-link" href="/docs/getting-support">
-          <div class="topic-info">
+
             <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/icon-support.svg)"></div>
             <div class="topic-info__text">
               <h3 class="topic-info__title">Support</h3>
-              <p class="topic-info__description">Need even more help? We’re here for you. Find out how to get support from Pantheon.</p>
+              <p class="topic-info__description">Need more help? We’re here for you. Learn how to get support directly from our team.</p>
             </div>
-        </div>
+
+        </a>
       </div>
+
+    </div>
+
   </div>
 
 
@@ -138,11 +146,12 @@ ul.pio-breadcrumb {
 
   <div class="row">
     <div class="col-md-12">
-      <h2 class="subtitle">Popular Docs</h2>
+      <h2 class="subtitle">Popular Documentation</h2>
     </div>
   </div>
   <div class="row mb-70">
-    <ul class="top-docs">
+    <div class="col-md-12">
+    <ul class="top-docs top-docs-3col">
       <li><a href="/docs/kill-mysql-queries">Identify and Kill MySQL Queries</a></li>
       <li><a href="/docs/domains">Domains and DNS</a></li>
       <li><a href="/docs/settings-php">Configuring settings.php</a></li>
@@ -156,6 +165,7 @@ ul.pio-breadcrumb {
       <li><a href="/docs/sftp">Developing on Pantheon Directly with SFTP Mode</a></li>
       <li><a href="/docs/migrate">Migrate Sites to Pantheon</a></li>
     </ul>
+    </div>
   </div>
 
 
@@ -163,5 +173,3 @@ ul.pio-breadcrumb {
   <div class="row mb-70">
     {% include "changelog_preview.twig" %}
   </div>
-
-</div>
