--- a/source/_partials/footer_scripts.html
+++ b/source/_partials/footer_scripts.html
@@ -1,14 +1,21 @@
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 
   <!-- Latest compiled and minified JavaScript -->
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-  <script src="/docs/assets/js/main.js"></script>
+  <script src="/docs/assets/js/node_modules/angular/angular.min.js"></script>
+  <script src="/docs/assets/js/node_modules/angular-md/dist/angular-md.js"></script>
+  <script src="/docs/assets/js/node_modules/marked/lib/marked.js"></script>
+  <script src="/docs/assets/js/node_modules/angular-material/angular-material.min.js"></script>
+  <script src="/docs/assets/js/node_modules/angular-animate/angular-animate.min.js"></script>
+  <script src="/docs/assets/js/node_modules/angular-aria/angular-aria.min.js"></script>
   <script src="/docs/assets/js/vendor/jquery-ui-1.9.1.custom.min.js"></script>
   <script src="/docs/assets/js/highlight.pack.js"></script>
-  <script>hljs.initHighlightingOnLoad();</script>
+  <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   <script src="/docs/assets/js/src/application.js"></script>
   <script src="/docs/assets/js/jquery.tocify.js"></script>
   <script src="//www.google-analytics.com/analytics.js"></script>
+  <script src="/docs/assets/js/node_modules/clipboard/dist/clipboard.min.js"></script>
+  <script src="/docs/assets/js/main.js"></script>
+
   <script>
   $(document).ready(function() {
       $("[rel=popover]").popover({'trigger':'hover'});
