--- a/source/_partials/footer_scripts.html
+++ b/source/_partials/footer_scripts.html
@@ -10,6 +10,7 @@
   <script src="/docs/assets/js/vendor/jquery-ui-1.9.1.custom.min.js"></script>
   <script src="/docs/assets/js/highlight.pack.js"></script>
   <script>hljs.initHighlightingOnLoad();</script>
+  <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   <script src="/docs/assets/js/src/application.js"></script>
   <script src="/docs/assets/js/jquery.tocify.js"></script>
   <script src="//www.google-analytics.com/analytics.js"></script>
